--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PorkyPictures.Inc</title>
+</head>
+<body>
+    <h1 class="center">PorkyPictures</h1>
+</body>
+<style>
+    .center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
+    width: 100%;
+}
 
+</style>
+<script>
+    function catPicture(){
+	console.log("  /\\_/\\");
+	console.log(" =( °w° )=");
+	console.log("  )   (  ");
+	console.log(" (__ __) ");
+}
+
+catPicture();
+</script>
+</html>
