--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="script" href="script.ts">
+    <link rel="stylesheet" href="style.css">
     <title>PorkyPictures.Inc</title>
 </head>
 <body>
-    <h1 class="center">PorkyPictures</h1>
+    <h1 class="centerAri">PorkyPictures</h1>
+    <h2 class="centerAri">A place for all Porky Pictures</h2>
+    <button class="center" onclick="window.location.href='whatisporky.html'">What is Porky</button>
+    <button class="center" onclick="window.location.href='gallery.html'">Gallery</button>
+    <button class="center" onclick="window.location.href='contact.html'">Contact</button>
+    <button class="center" onclick="window.location.href='about.html'">About</button>
 </body>
-<style>
-    .center {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-top: auto;
-    width: 100%;
-}
-
-</style>
 <script>
     function catPicture(){
 	console.log("  /\\_/\\");
