--- a/games.html
+++ b/games.html
@@ -31,8 +31,8 @@
         </div>
         <div class="header-right">
             <!--Different headers-->
-            <a class="active" href="index.html">Home</a>
-            <a href="games.html">Games</a>
+            <a href="index.html">Home</a>
+            <a class="active" href="games.html">Games</a>
             <a href="#3d-prints">3D Prints</a>
             <a href="#contact">Unused</a>
             <a href="#developers">Developers</a>
