--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="index.html" class="logo">
             <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k" width="100" height="70" />
         </a>
-        <div class="header-logoText" style="left:150px; top: 40px; font-size: 32px;">
+        <div id="logoText" class="header-logoText" style="left:150px; top: 40px; font-size: 32px;">
             PorkyProductions
         </div>
         <div class="header-right">
