fix for broken webpages

--- a/games.html
+++ b/games.html
@@ -33,9 +33,8 @@
             <!--Different headers-->
             <a href="index.html">Home</a>
             <a class="active" href="games.html">Games</a>
-            <a href="#3d-prints">3D Prints</a>
-            <a href="#contact">Unused</a>
-            <a href="#developers">Developers</a>
+            <a href="3DPrints.html">3D Prints</a>
+            <a href="develop.html">Developments</a>
         </div>
     </div>
 
