--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
             <!--Different headers-->
             <a class="active" href="index.html">Home</a>
             <a href="games.html">Games</a>
-            <a href="#3d-prints">3D Prints</a>
-            <a href="#contact">Unused</a>
-            <a href="#developers">Developers</a>
+            <a href="3DPrints.html">3D Prints</a>
+            <a href="develop.html">Developments</a>
         </div>
     </div>
 
