--- a/3DPrints.html
+++ b/3DPrints.html
@@ -25,6 +25,7 @@
 
 
     <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="pagestyle.css">
 
 </head>
 
@@ -49,7 +50,17 @@
     </div>
 
     <div style="padding-left:20px">
-        <p>Some content..</p>
+        <h1 class="mainHeading">3D Prints</h1>
+        <p class="mainBody">
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+        </p>
     </div>
 
 
