--- a/develop.html
+++ b/develop.html
@@ -25,6 +25,7 @@
 
 
     <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="pagestyle.css">
 
 </head>
 
@@ -47,9 +48,18 @@
             <a class="active" href="develop.html">Developments</a>
         </div>
     </div>
-
+<br>
     <div style="padding-left:20px">
-        <p>Some content..</p>
+        <h1 class="mainHeading">Technological Developments</h1>
+        <br>
+        <p class="mainBody">
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+        </p>
     </div>
 
 
