--- a/games.html
+++ b/games.html
@@ -15,6 +15,7 @@
     
 
     <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="pagestyle.css">
 
 </head>
 
@@ -39,7 +40,15 @@
     </div>
 
     <div style="padding-left:20px">
-        <p>Some content..</p>
+        <h1 class="mainHeading">Porky Productions Games</h1>
+        <p class="mainBody">
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+            WORDS
+        </p>
     </div>
 
 
