--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 
     <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="pagestyle.css">
 
 </head>
 
@@ -47,9 +48,15 @@
             <a href="develop.html">Developments</a>
         </div>
     </div>
-
+<br>
     <div style="padding-left:20px">
-        <p>Some content..</p>
+        <h1 class="mainHeading">PorkyProductions</h1>
+        <p class="mainBody">
+            PorkyProductions is a small company that specializes in making games and 3D prints.
+            We are currently working on a game called "Porky's Game" that is a platformer.
+            We are also working on a 3D printer called "Porky's Printer" that can print out
+            any 3D model.
+        </p>
     </div>
 
 
