--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -50,7 +50,7 @@
     </div>
 <br>
     <div style="padding-left:20px">
-        <h1 class="mainHeading">PorkyProductions</h1>
+        <h1 class="mainTitle">PorkyProductions</h1>
         <br>
         <p class="mainBody">
             PorkyProductions is a small company that specializes in making games and 3D prints.
