--- a/games.html
+++ b/games.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="pagestyle.css">
+
 
 </head>
 
