--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <link rel="stylesheet" href="Header.css">
-    <link rel="stylesheet" href="pagestyle.css">
+    <link rel="stylesheet" href="MasterStyle.css">
 
 </head>
 
@@ -50,13 +50,14 @@
     </div>
 <br>
     <div style="padding-left:20px">
-        <h1 class="mainTitle">PorkyProductions</h1>
+        <div class="mainTitle">
+            <h1>PorkyProductions</h1>
+        </div>
         <br>
         <p class="mainBody">
             PorkyProductions is a small company that specializes in making games and 3D prints.
             We are currently working on a game called "Porky's Game" that is a platformer.
-            We are also working on a 3D printer called "Porky's Printer" that can print out
-            any 3D model.
+            
         </p>
     </div>
 
