--- a/games.html
+++ b/games.html
@@ -1,59 +1,61 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Home - Porky Productions</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous">
-    </script>
-    <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
+    <head>
+        <meta charset="utf-8" />
+        <title>Home - Porky Productions</title>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"
+                integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+                crossorigin="anonymous">
+        </script>
+        <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="Utility.js"></script>
-    <script src="Header.js"></script>
-    
-
-    <link rel="stylesheet" href="Header.css">
-    <link rel="stylesheet" href="pagestyle.css">
+        <script src="Utility.js"></script>
+        <script src="Header.js"></script>
 
 
-</head>
+        <link rel="stylesheet" href="Header.css">
+        <link rel="stylesheet" href="MasterStyle.css">
 
-<body>
+
+    </head>
+
+    <body>
 
 
-    <div id="header" class="header">
-        <!--Hegdehog logo thing-->
-        <a href="index.html" class="logo">
-            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k" width="100" height="70" />
-        </a>
-        <div id ="logoText"class="header-logoText" style="left:150px; top: 40px; font-size: 32px;">
-            PorkyProductions
+        <div id="header" class="header">
+            <!--Hegdehog logo thing-->
+            <a href="index.html" class="logo">
+                <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k" width="100" height="70" />
+            </a>
+            <div id ="logoText"class="header-logoText" style="left:150px; top: 40px; font-size: 32px;">
+                PorkyProductions
+            </div>
+            <div class="header-right">
+                <!--Different headers-->
+                <a href="index.html">Home</a>
+                <a class="active" href="games.html">Games</a>
+                <a href="3DPrints.html">3D Prints</a>
+                <a href="develop.html">Developments</a>
+            </div>
         </div>
-        <div class="header-right">
-            <!--Different headers-->
-            <a href="index.html">Home</a>
-            <a class="active" href="games.html">Games</a>
-            <a href="3DPrints.html">3D Prints</a>
-            <a href="develop.html">Developments</a>
-        </div>
-    </div>
-<br>
-    <div style="padding-left:20px">
-        <h1 class="mainHeading">Porky Productions Games</h1>
         <br>
-        <p class="mainBody">
-            WORDS
-            WORDS
-            WORDS
-            WORDS
-            WORDS
-            WORDS
-        </p>
-    </div>
+        <div style="padding-left:20px">
+            <div class="mainTitle">
+                <h1>Hedgehog Studios Games</h1>
+            </div>
+            <br>
+            <p class="mainBody">
+                WORDS
+                WORDS
+                WORDS
+                WORDS
+                WORDS
+                WORDS
+            </p>
+        </div>
 
 
-</body>
+    </body>
 
 </html>
