--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 
     <link rel="stylesheet" href="Header.css">
     <link rel="stylesheet" href="MasterStyle.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
 <body>
 
 
-    <div id ="header" class="header">
+    <div id="header" class="header">
         <!--Hegdehog logo thing-->
         <a href="index.html" class="logo">
             <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k" width="100" height="70" />
@@ -48,17 +49,31 @@
             <a href="develop.html">Developments</a>
         </div>
     </div>
-<br>
-    <div style="padding-left:20px">
+    <br>
+
+    
+    <div>
         <div class="mainTitle">
             <h1>PorkyProductions</h1>
         </div>
         <br>
-        <p class="mainBody">
-            PorkyProductions is a small company that specializes in making games and 3D prints.
-            We are currently working on a game called "Porky's Game" that is a platformer.
-            
-        </p>
+        <div class="mainBody">
+
+            <div class="mainBody-intro">
+                Porky Productions is a group of highly established individuals namely Tristan and Ryan, who are on the path for technological development in
+                many areas. This website is meant to showcase our accomplishments as well as to create something that we can be proud about.
+            </div>
+            <div class="mainBody-grid">
+                <i>
+                    Current games are being produced by Hedgehog Studios and is setting a new foundation for releases of cool, slick games that everyone
+                    can enjoy! Follow our adventure and perhaps download the game here!
+                </i>
+                <i>
+                    Porky Productions also specialize in building real world models using our 3D printers. Our creations, and models can be viewed here!
+                </i>
+            </div>
+
+        </div>
     </div>
 
 
