--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         </div>
         <br>
         <div class="mainBody">
-
-            <div class="mainBody-intro">
-                <h3>What is Porky Productions?</h3>
-                Porky Productions is a group of highly established individuals namely Tristan and Ryan, who are on the path for technological development in
-                many areas. This website is meant to showcase our accomplishments as well as to create something that we can be proud about.
+            <div class="mainBody-intro-container">
+                <div class="mainBody-intro">
+                    <h3>What is Porky Productions?</h3>
+                    Porky Productions is a group of highly established individuals namely Tristan and Ryan, who are on the path for technological development in
+                    many areas. This website is meant to showcase our accomplishments as well as to create something that we can be proud about.
+                </div>
             </div>
             <div class="mainBody-grid">
                 <i>
