--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 </div>
             </div>
             <div class="mainBody-grid">
-                <i>
+                <i class="mainBody-tile">
                     Current games are being produced by Hedgehog Studios and is setting a new foundation for releases of cool, slick games that everyone
-                    can enjoy! Follow our adventure and perhaps download the game here!
+                    can enjoy! Follow our adventure and perhaps download our games here!
                 </i>
-                <i>
+                <i class="mainBody-tile">
                     Porky Productions also specialize in building real world models using our 3D printers. Our creations, and models can be viewed here!
                 </i>
             </div>
