--- a/index.html
+++ b/index.html
@@ -1,84 +1,80 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Home - Porky Productions</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous">
-    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script src="Utility.js"></script>
     <script src="Header.js"></script>
     <script src="HomeMain.js"></script>
 
+    <link rel="stylesheet" href="Header.css" />
+    <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-
-
-
-
-
-
-
-
-
-    <link rel="stylesheet" href="Header.css">
-    <link rel="stylesheet" href="MasterStyle.css">
-    <link rel="stylesheet" href="index.css">
-
-</head>
-
-<body>
-
-
+  <body>
     <div id="header" class="header">
-        <!--Hegdehog logo thing-->
-        <a href="index.html" class="logo">
-            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k" width="100" height="70" />
-        </a>
-        <div id="logoText" class="header-logoText" style="left:150px; top: 40px; font-size: 32px;">
-            PorkyProductions
-        </div>
-        <div class="header-right">
-            <!--Different headers-->
-            <a class="active" href="index.html">Home</a>
-            <a href="games.html">Games</a>
-            <a href="3DPrints.html">3D Prints</a>
-            <a href="develop.html">Developments</a>
-        </div>
+      <!--Hegdehog logo thing-->
+      <a href="index.html" class="logo">
+        <img
+          src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
+          width="100"
+          height="70"
+        />
+      </a>
+      <div
+        id="logoText"
+        class="header-logoText"
+        style="left: 150px; top: 40px; font-size: 32px"
+      >
+        PorkyProductions
+      </div>
+      <div class="header-right">
+        <!--Different headers-->
+        <a class="active" href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="3DPrints.html">3D Prints</a>
+        <a href="develop.html">Developments</a>
+      </div>
     </div>
-    <br>
+    <br />
 
-    
     <div>
-        <div class="mainTitle">
-            <h1>PorkyProductions</h1>
+      <div class="mainTitle">
+        <h1>PorkyProductions</h1>
+      </div>
+      <br />
+      <div class="mainBody">
+        <div class="mainBody-intro-container">
+          <div class="mainBody-intro">
+            <h3>What is Porky Productions?</h3>
+            Porky Productions is a group of highly established individuals
+            namely Tristan and Ryan, who are on the path for technological
+            development in many areas. This website is meant to showcase our
+            accomplishments as well as to create something that we can be proud
+            about.
+          </div>
         </div>
-        <br>
-        <div class="mainBody">
-            <div class="mainBody-intro-container">
-                <div class="mainBody-intro">
-                    <h3>What is Porky Productions?</h3>
-                    Porky Productions is a group of highly established individuals namely Tristan and Ryan, who are on the path for technological development in
-                    many areas. This website is meant to showcase our accomplishments as well as to create something that we can be proud about.
-                </div>
-            </div>
-            <div class="mainBody-grid">
-                <i class="mainBody-tile">
-                    Current games are being produced by Hedgehog Studios and is setting a new foundation for releases of cool, slick games that everyone
-                    can enjoy! Follow our adventure and perhaps download our games here!
-                </i>
-                <i class="mainBody-tile">
-                    Porky Productions also specialize in building real world models using our 3D printers. Our creations, and models can be viewed here!
-                </i>
-            </div>
-
+        <div class="mainBody-grid">
+          <i class="mainBody-tile">
+            Current games are being produced by Hedgehog Studios and is setting
+            a new foundation for releases of cool, slick games that everyone can
+            enjoy! Follow our adventure and perhaps download our games here!
+          </i>
+          <i class="mainBody-tile">
+            Porky Productions also specialize in building real world models
+            using our 3D printers. Our creations, and models can be viewed here!
+          </i>
         </div>
+      </div>
     </div>
-
-
-</body>
-
+  </body>
 </html>
