--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Page Not Found</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>404</h1>
     <h3>Thats an Error</h3>
     <h4>The page you are looking for does not exist</h4>
     <h5>Try going home</h5>
     <button onclick="window.location.href='index.html'">Home</button>
-</body>
+  </body>
 </html>
