continued work on that page

--- a/develop.html
+++ b/develop.html
@@ -50,7 +50,31 @@
         <h1>Developments</h1>
       </div>
       <br />
-      <p class="mainBody">WORDS WORDS WORDS WORDS WORDS WORDS</p>
+      <p class="mainBody">
+        Here at PorkyProductions we are working on a variety of projects. We innovate new technologies everyday, and create new ways to interact with the world around us. <br>
+        <br>
+        We are currently working on a variety of projects, and we are always looking for new ideas to work on.
+        <br>
+        <br>
+        Some of the projects we are working on include:
+        <br>
+        <br>
+        <a href="https://github.com/PorkyProductions/PorkyOS">PorkyOS</a>
+        <p class="mainBody">
+          PorkyOS is a new operating system for x86_64 computers. It is currently being developed by PorkyProductions. It is a fully featured operating system, with a fully featured GUI.
+          <br>
+          It is written in C and forked from Linux, so there should be no compatibility issues.
+          </p>
+        <br>
+        <a href="https://github.com/PorkyProductions/-de-Motivator" class="center" >(de)Motivator</a>
+        <p class="mainBody">
+          (de)Motivator is a simple web application that generates a random insult for the user. It is written in TypeScript and HTML + CSS.
+          <br>
+          It is currently being developed by PorkyProductions.
+          </p>
+        <br>
+        <a href="https://github.com/PorkyProductions/PorkyNet">PorkyNet</a>
+      </p>
     </div>
   </body>
 </html>
