--- a/develop.html
+++ b/develop.html
@@ -73,7 +73,7 @@
           It is currently being developed by PorkyProductions.
           </p>
         <br>
-        <a href="https://github.com/PorkyProductions/PorkyNet">PorkyNet</a>
+        <a href="https://github.com/PorkyProductions/PorkyNet" class="center" >PorkyNet</a>
       </p>
     </div>
   </body>
