wrote the blurb about porkynet

--- a/develop.html
+++ b/develop.html
@@ -74,6 +74,11 @@
           </p>
         <br>
         <a href="https://github.com/PorkyProductions/PorkyNet" class="center" >PorkyNet</a>
+        <p class="mainBody">
+          PorkyNet is a modern web browser that is designed to be a modern replacement for the old web browser. It is written in C++ and uses the Qt framework. It is forked from Chromium.
+          <br>
+          It is currently being developed by PorkyProductions.
+          </p>
       </p>
     </div>
   </body>
