--- a/develop.html
+++ b/develop.html
@@ -47,7 +47,7 @@
     <br />
     <div style="padding-left: 20px">
       <div class="mainTitle">
-        <h1>Developments</h1>
+        <h1>Technlogical Developments</h1>
       </div>
       <br />
       <p class="mainBody">
