spruced up the 404 page

--- a/404.html
+++ b/404.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="MasterStyle.css">
     <title>404 Page Not Found</title>
   </head>
   <body>
-    <h1>404</h1>
-    <h3>Thats an Error</h3>
-    <h4>The page you are looking for does not exist</h4>
-    <h5>Try going home</h5>
-    <button onclick="window.location.href='index.html'">Home</button>
+    <h1 class="mainTitle">404</h1>
+    <h3 class="mainTitle">Thats an Error</h3>
+    <h4 class="mainBody">The page you are looking for does not exist</h4>
+    <h5 class="mainBody">Try going home</h5>
+    <button onclick="window.location.href='index.html'" class="center">Home</button>
   </body>
 </html>
