--- a/index.html
+++ b/index.html
@@ -66,15 +66,28 @@
           </div>
         </div>
         <div class="mainBody-grid">
-          <i class="mainBody-tile">
-            Current games are being produced by Hedgehog Studios and is setting
-            a new foundation for releases of cool, slick games that everyone can
-            enjoy! Follow our adventure and perhaps download our games here!
-          </i>
-          <i class="mainBody-tile">
-            Porky Productions also specialize in building real world models
-            using our 3D printers. Our creations, and models can be viewed here!
-          </i>
+          <div class="mainBody-tile">
+              <h3>
+                  You Make Games?
+              </h3>
+              <p>
+                  Current games are being produced by Hedgehog Studios and is setting
+                  a new foundation for releases of cool, slick games that everyone can
+                  enjoy! Follow our adventure and perhaps download our games here!
+              </p>
+              <a href="games.html">Games Tab</a>
+          </div>
+          <div class="mainBody-tile">
+              <h3>
+                  Porky Productions 3D Prints
+              </h3>
+              <p>
+                  Porky Productions also specialize in building real world models
+                  using our 3D printers. Our creations, and models can be viewed here!
+              </p>
+              <a href="3DPrints.html">3D Prints Tab</a>
+
+          </div>
         </div>
       </div>
     </div>
