added spot about imperial credit
@HedgehogDubz  can you figure out how to make it smaller?

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -50,7 +50,10 @@
         <h1>3D Prints</h1>
       </div>
       <br />
-      <p class="mainBody">WORDS WORDS WORDS WORDS WORDS WORDS WORDS WORDS</p>
+      <img src="images/IMG_4488.JPG" width="10px" class="center" />
+      <p class="mainBody">THE IMPERIAL CREDIT</p>
+      <br>
+      <p class="mainBody">This is a new replacement for the existing monetary standard. <br> Instead of having this currency regulated by governemnts, this is the world's first currency to be controlled by a company<br> It does not have to rely on cryptography and is cheap and easy to produce via a 3D Printer.</p>
     </div>
   </body>
 </html>
