--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="games.html">Games</a>
         <a href="3DPrints.html">3D Prints</a>
+        <a href="Models.html">Models</a>
         <a href="develop.html">Developments</a>
       </div>
     </div>
