--- a/Models.html
+++ b/Models.html
@@ -41,7 +41,7 @@
     <br />
     <div style="padding-left: 20px">
         <div class="mainTitle">
-            <h1>Hedgehog Studios Games</h1>
+            <h1>3D Models</h1>
         </div>
         <br />
         <p class="mainBody">WORDS WORDS WORDS WORDS WORDS WORDS</p>
