ADD models download and fixed other stuf

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -51,7 +51,7 @@
         <h1>3D Prints</h1>
       </div>
       <br />
-      <img src="images/IMG_4488.JPG" width="10px" class="center" />
+      <img src="images/IMG_4488.JPG" width="10" class="center" />
       <p class="mainBody">THE IMPERIAL CREDIT</p>
       <br>
       <p class="mainBody">This is a new replacement for the existing monetary standard. <br> Instead of having this currency regulated by governemnts, this is the world's first currency to be controlled by a company<br> It does not have to rely on cryptography and is cheap and easy to produce via a 3D Printer.</p>
