--- a/Models.html
+++ b/Models.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="stylesheet" href="models.css" />
 </head>
 
 <body>
@@ -44,7 +45,11 @@
             <h1>3D Models</h1>
         </div>
         <br />
-        <p class="mainBody">WORDS WORDS WORDS WORDS WORDS WORDS</p>
+        <div class="mainBody-grid">
+            <div class="mainBody-tile">
+                <a href="models/hedgehog.stl">Download Hedgehog Model</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
