--- a/Models.html
+++ b/Models.html
@@ -47,8 +47,22 @@
         <br />
         <div class="mainBody-grid">
             <div class="mainBody-tile">
+                <h3>
+                    Hedgehog
+                </h3>
                 <a href="models/hedgehog.stl">Download Hedgehog Model</a>
             </div>
+            <div class="mainBody-tile">
+                <h3>
+                    Old Books
+                </h3>
+                <p>
+                    <a href="models/old boooke.stl">Download Model (most compatibility)</a>
+                    <br>
+                    <br>
+                    <a href="models/old boooke.blend">Download Model (most detail)</a>
+                </p>
+            
         </div>
     </div>
 </body>
