Added Hedgehog Model Images

--- a/Models.html
+++ b/Models.html
@@ -48,6 +48,9 @@
         <div class="mainBody-grid">
             <div class="mainBody-tile">
                 <a href="models/hedgehog.stl">Download Hedgehog Model</a>
+                <br />
+                <img src="images/HedgehogModel_Front.png" width ="300"alt="Hedgehog Model Front"/>
+                <img src="images/HedgehogModel_Side.png" width ="300"alt="Hedgehog Model Front"/>
             </div>
         </div>
     </div>
