added file types

--- a/Models.html
+++ b/Models.html
@@ -48,22 +48,22 @@
         <div class="mainBody-grid">
             <div class="mainBody-tile">
                 <h3>
-                    Hedgehog
+                    Hedgehog - By Tristan 
                 </h3>
-                <a href="models/hedgehog.stl">Download Hedgehog Model</a>
+                <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
                 <br />
                 <img src="images/HedgehogModel_Front.png" width ="300"alt="Hedgehog Model Front"/>
                 <img src="images/HedgehogModel_Side.png" width ="300"alt="Hedgehog Model Front"/>
             </div>
             <div class="mainBody-tile">
                 <h3>
-                    Old Books
+                    Old Books - By Ryan 
                 </h3>
                 <p>
-                    <a href="models/old boooke.stl">Download Model (most compatibility)</a>
+                    <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
                     <br>
                     <br>
-                    <a href="models/old boooke.blend">Download Model (most detail)</a>
+                    <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
                 </p>
             
         </div>
