put my images on there

--- a/Models.html
+++ b/Models.html
@@ -64,6 +64,10 @@
                     <br>
                     <br>
                     <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
+                    <br>
+                    <br>
+                    <img src="images/books.jpg" width ="300"alt="Old Books Model"/>
+
                 </p>
             
         </div>
