updated to png format

--- a/Models.html
+++ b/Models.html
@@ -66,7 +66,7 @@
                     <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
                     <br>
                     <br>
-                    <img src="images/books.jpg" width ="300"alt="Old Books Model"/>
+                    <img src="images/books.png" width ="300"alt="Old Books Model"/>
 
                 </p>
             
