added branding assets and added favicons

--- a/Models.html
+++ b/Models.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="MasterStyle.css" />
     <link rel="stylesheet" href="models.css" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
 </head>
 
 <body>
