--- a/games.html
+++ b/games.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
   <body>
