--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="MasterStyle.css">
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
     <title>404 Page Not Found</title>
   </head>
   <body>
