--- a/develop.html
+++ b/develop.html
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
   <body>
