--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="Header.css" />
     <link rel="stylesheet" href="MasterStyle.css" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
   <body>
