started organizing a bit more

--- a/games.html
+++ b/games.html
@@ -14,8 +14,8 @@
     <script src="Utility.js"></script>
     <script src="Header.js"></script>
 
-    <link rel="stylesheet" href="Header.css" />
-    <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
