--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script src="Header.js"></script>
     <script src="HomeMain.js"></script>
 
-    <link rel="stylesheet" href="Header.css" />
-    <link rel="stylesheet" href="MasterStyle.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/MasterStyle.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
