--- a/Models.html
+++ b/Models.html
@@ -12,9 +12,9 @@
     <script src="Utility.js"></script>
     <script src="Header.js"></script>
 
-    <link rel="stylesheet" href="Header.css" />
-    <link rel="stylesheet" href="MasterStyle.css" />
-    <link rel="stylesheet" href="models.css" />
+    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/MasterStyle.css" />
+    <link rel="stylesheet" href="css/models.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
 </head>
 
