--- a/develop.html
+++ b/develop.html
@@ -15,8 +15,8 @@
     <script src="Header.js"></script>
     <script src="HomeMain.js"></script>
 
-    <link rel="stylesheet" href="Header.css" />
-    <link rel="stylesheet" href="MasterStyle.css" />
+    <link rel="stylesheet" href="css/Header.css" />
+    <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
   </head>
 
