organize JS stuff

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     ></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="Utility.js"></script>
-    <script src="Header.js"></script>
-    <script src="HomeMain.js"></script>
+    <script src="js/Utility.js"></script>
+    <script src="js/Header.js"></script>
+    <script src="js/index.js"></script>
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
