--- a/games.html
+++ b/games.html
@@ -11,8 +11,8 @@
     ></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
-    <script src="Utility.js"></script>
-    <script src="Header.js"></script>
+    <script src="js/Utility.js"></script>
+    <script src="js/Header.js"></script>
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
