changed folder extensions

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <div class="header-right">
         <!--Different headers-->
         <a class="active" href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="3DPrints.html">3D Prints</a>
-        <a href="Models.html">Models</a>
-        <a href="develop.html">Developments</a>
+        <a href="html/games.html">Games</a>
+        <a href="html/3DPrints.html">3D Prints</a>
+        <a href="html/Models.html">Models</a>
+        <a href="html/develop.html">Developments</a>
       </div>
     </div>
     <br />
