--- a/Models.html
+++ b/Models.html
@@ -54,9 +54,9 @@
                 </h3>
                 <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
                 <br />
-                <button id="button_HedgehogPreviewLeft"></button>
+                <button id="button_HedgehogPreviewLeft" class="buttonBigger"><</button>
                 <img id="hedgehogModelPreview" src="images/HedgehogPreview_Front.png" width ="300"height="250" alt="Hedgehog Model Front" />
-                <button id="button_HedgehogPreviewRight"></button>
+                <button id="button_HedgehogPreviewRight" class="buttonBigger">></button>
             </div>
             <div class="mainBody-tile">
                 <h3>
