--- a/3DPrints.html
+++ b/3DPrints.html
@@ -17,7 +17,8 @@
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <!--FAVICON-->
   </head>
 
   <body>
@@ -38,12 +39,12 @@
         PorkyProductions
       </div>
       <div class="header-right">
-          <!--Different headers-->
-          <a href="index.html">Home</a>
-          <a href="games.html">Games</a>
-          <a class="active" href="3DPrints.html">3D Prints</a>
-          <a href="Models.html">Models</a>
-          <a href="develop.html">Developments</a>
+        <!--Different headers-->
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a class="active" href="3DPrints.html">3D Prints</a>
+        <a href="Models.html">Models</a>
+        <a href="develop.html">Developments</a>
       </div>
     </div>
     <br />
@@ -54,8 +55,14 @@
       <br />
       <img src="images/IMG_4488.JPG" width="10" class="center" />
       <p class="mainBody">THE IMPERIAL CREDIT</p>
-      <br>
-      <p class="mainBody">This is a new replacement for the existing monetary standard. <br> Instead of having this currency regulated by governemnts, this is the world's first currency to be controlled by a company<br> It does not have to rely on cryptography and is cheap and easy to produce via a 3D Printer.</p>
+      <br />
+      <p class="mainBody">
+        This is a new replacement for the existing monetary standard. <br />
+        Instead of having this currency regulated by governemnts, this is the
+        world's first currency to be controlled by a company<br />
+        It does not have to rely on cryptography and is cheap and easy to
+        produce via a 3D Printer.
+      </p>
     </div>
   </body>
 </html>
