--- a/games.html
+++ b/games.html
@@ -16,7 +16,8 @@
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <!--FAVICON-->
   </head>
 
   <body>
@@ -37,12 +38,12 @@
         PorkyProductions
       </div>
       <div class="header-right">
-          <!--Different headers-->
-          <a href="index.html">Home</a>
-          <a class="active" href="games.html">Games</a>
-          <a href="3DPrints.html">3D Prints</a>
-          <a href="Models.html">Models</a>
-          <a href="develop.html">Developments</a>
+        <!--Different headers-->
+        <a href="index.html">Home</a>
+        <a class="active" href="games.html">Games</a>
+        <a href="3DPrints.html">3D Prints</a>
+        <a href="Models.html">Models</a>
+        <a href="develop.html">Developments</a>
       </div>
     </div>
     <br />
