--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <!--FAVICON-->
   </head>
 
   <body>
@@ -69,26 +70,23 @@
         </div>
         <div class="mainBody-grid">
           <div class="mainBody-tile">
-              <h3>
-                  You Make Games?
-              </h3>
-              <p>
-                  Current games are being produced by Hedgehog Studios and is setting
-                  a new foundation for releases of cool, slick games that everyone can
-                  enjoy! Follow our adventure and perhaps download our games here!
-              </p>
-              <a href="games.html">Games Tab</a>
+            <h3>You Make Games?</h3>
+            <p>
+              Current games are being produced by Hedgehog Studios and is
+              setting a new foundation for releases of cool, slick games that
+              everyone can enjoy! Follow our adventure and perhaps download our
+              games here!
+            </p>
+            <a href="games.html">Games Tab</a>
           </div>
           <div class="mainBody-tile">
-              <h3>
-                  Porky Productions 3D Prints
-              </h3>
-              <p>
-                  Porky Productions also specialize in building real world models
-                  using our 3D printers. Our creations, and models can be viewed here!
-              </p>
-              <a href="3DPrints.html">3D Prints Tab</a>
-
+            <h3>Porky Productions 3D Prints</h3>
+            <p>
+              Porky Productions also specialize in building real world models
+              using our 3D printers. Our creations, and models can be viewed
+              here!
+            </p>
+            <a href="3DPrints.html">3D Prints Tab</a>
           </div>
         </div>
       </div>
