--- a/404.html
+++ b/404.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/MasterStyle.csss">
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
+    <link rel="stylesheet" href="css/MasterStyle.csss" />
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <!--FAVICON-->
     <title>404 Page Not Found</title>
   </head>
   <body>
@@ -13,6 +14,8 @@
     <h3 class="mainTitle">Thats an Error</h3>
     <h4 class="mainBody">The page you are looking for does not exist</h4>
     <h5 class="mainBody">Try going home</h5>
-    <button onclick="window.location.href='index.html'" class="center">Home</button>
+    <button onclick="window.location.href='index.html'" class="center">
+      Home
+    </button>
   </body>
 </html>
