--- a/Models.html
+++ b/Models.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Models - Porky Productions</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"
-            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-            crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
     <!-----SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS------SCRIPTS----->
 
     <script src="js/Utility.js"></script>
@@ -16,66 +18,82 @@
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/models.css" />
-    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" /> <!--FAVICON-->
-</head>
+    <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
+    <!--FAVICON-->
+  </head>
 
-<body>
+  <body>
     <div id="header" class="header">
-        <!--Hegdehog logo thing-->
-        <a href="index.html" class="logo">
-            <img src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
-                 width="100"
-                 height="70" />
-        </a>
-        <div id="logoText"
-             class="header-logoText"
-             style="left: 150px; top: 40px; font-size: 32px">
-            PorkyProductions
-        </div>
-        <div class="header-right">
-            <!--Different headers-->
-            <a href="index.html">Home</a>
-            <a href="games.html">Games</a>
-            <a href="3DPrints.html">3D Prints</a>
-            <a class="active" href="Models.html">Models</a>
-            <a href="develop.html">Developments</a>
-        </div>
+      <!--Hegdehog logo thing-->
+      <a href="index.html" class="logo">
+        <img
+          src="https://lh3.googleusercontent.com/k-u9rOXwTYfcI8FFUc_8yLpkOBHc0C-uG7MZC-xzG4_w4Z3exV0m0iMTbWJ2yGfxMUR2OjfAe-rdDn7xwhptNoh4mWP3KE10yBYD59oAFR8q-ZPcOn026JLPfq5foH7MoTUoawCiNA=w270-h214-p-k"
+          width="100"
+          height="70"
+        />
+      </a>
+      <div
+        id="logoText"
+        class="header-logoText"
+        style="left: 150px; top: 40px; font-size: 32px"
+      >
+        PorkyProductions
+      </div>
+      <div class="header-right">
+        <!--Different headers-->
+        <a href="index.html">Home</a>
+        <a href="games.html">Games</a>
+        <a href="3DPrints.html">3D Prints</a>
+        <a class="active" href="Models.html">Models</a>
+        <a href="develop.html">Developments</a>
+      </div>
     </div>
     <br />
     <div style="padding-left: 20px">
-        <div class="mainTitle">
-            <h1>3D Models</h1>
+      <div class="mainTitle">
+        <h1>3D Models</h1>
+      </div>
+      <br />
+      <div class="mainBody-grid">
+        <div class="mainBody-tile">
+          <h3>Hedgehog - By Tristan</h3>
+          <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
+          <br />
+          <img
+            id="hedgehogModelPreview"
+            src="images/HedgehogPreview_Front.png"
+            width="300"
+            height="250"
+            alt="Hedgehog Model Front"
+          />
+          <br />
+          <button id="button_HedgehogPreviewLeft" class="buttonBigger">
+            <
+          </button>
+          <button id="button_HedgehogPreviewRight" class="buttonBigger">
+            >
+          </button>
         </div>
-        <br />
-        <div class="mainBody-grid">
-            <div class="mainBody-tile">
-                <h3>
-                    Hedgehog - By Tristan
-                </h3>
-                <a href="models/hedgehog.stl">Download Hedgehog Model (.stl)</a>
-                <br />
-                <img id="hedgehogModelPreview" src="images/HedgehogPreview_Front.png" width ="300"height="250" alt="Hedgehog Model Front" />
-                <br>
-                <button id="button_HedgehogPreviewLeft" class="buttonBigger"><</button>
-                <button id="button_HedgehogPreviewRight" class="buttonBigger">></button>
-            </div>
-            <div class="mainBody-tile">
-                <h3>
-                    Old Books - By Ryan 
-                </h3>
-                <p>
-                    <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
-                    <br>
-                    <br>
-                    <a href="models/old boooke.blend">Download Old Books Model (.blend)</a>
-                    <br>
-                    <br>
-                    <img src="images/books.png" width ="300"height ="250"alt="Old Books Model"/>
-
-                </p>
-            </div>
-            
+        <div class="mainBody-tile">
+          <h3>Old Books - By Ryan</h3>
+          <p>
+            <a href="models/old boooke.stl">Download Old BooksModel (.stl)</a>
+            <br />
+            <br />
+            <a href="models/old boooke.blend"
+              >Download Old Books Model (.blend)</a
+            >
+            <br />
+            <br />
+            <img
+              src="images/books.png"
+              width="300"
+              height="250"
+              alt="Old Books Model"
+            />
+          </p>
         </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
