--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
           </div>
         </div>
       </div>
+      <a class="centerAri" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+       
     </div>
   </body>
 </html>
