--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
   </head>
@@ -89,8 +90,42 @@
             <a href="3DPrints.html">3D Prints Tab</a>
           </div>
         </div>
+        <div class="mainBody-grid">
+          <div class="mainBody-tile">
+            <h3>Porky Productions Models</h3>
+            <p>
+              Porky Productions also specialize in building real world models
+              using our 3D printers. Our creations, and models can be viewed
+              here!
+            </p>
+            <a href="Models.html">Models Tab</a>
+          </div>
+          <div class="mainBody-tile">
+            <h3>Porky Productions Developments</h3>
+            <p>
+              Porky Productions also specialize in building software that can change the world. Our Developments can be seen here!
+            </p>
+            <a href="develop.html">Developments Tab</a>
+          </div>
       </div>
-      <a class="centerAri" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+      <div class="footer">
+        <br>
+        <br>
+        <img src="assets/PPio logo.png" width="25%"/>
+        <br>
+        <p>
+          Porky Productions is a group of highly established individuals namely
+          Tristan and Ryan, who are on the path for technological development
+          in many areas. This website is meant to showcase our accomplishments
+          as well as to create something that we can be proud about.
+        </p>
+        <a class="center" href="index.html">Home</a>
+        <a class="center" href="games.html">Games</a>
+        <a class="center" href="3DPrints.html">3D Prints</a>
+        <a class="center" href="Models.html">Models</a>
+        <a class="center" href="develop.html">Developments</a>
+        <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+      </div>
        
     </div>
   </body>
