--- a/develop.html
+++ b/develop.html
@@ -83,5 +83,23 @@
           </p>
       </p>
     </div>
+    <div class="footer">
+      <br>
+      <br>
+      <img src="assets/PPio logo.png" width="25%"/>
+      <br>
+      <p>
+        Porky Productions is a group of highly established individuals namely
+        Tristan and Ryan, who are on the path for technological development
+        in many areas. This website is meant to showcase our accomplishments
+        as well as to create something that we can be proud about.
+      </p>
+      <a class="center" href="index.html">Home</a>
+      <a class="center" href="games.html">Games</a>
+      <a class="center" href="3DPrints.html">3D Prints</a>
+      <a class="center" href="Models.html">Models</a>
+      <a class="center" href="develop.html">Developments</a>
+      <a class="center" href="https://practical-lamport-2debac.netlify.app/">Sister Site (identical, if this site doesn't work, try this)</a>
+    </div>
   </body>
 </html>
