--- a/3DPrints.html
+++ b/3DPrints.html
@@ -17,6 +17,8 @@
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
   </head>
