--- a/games.html
+++ b/games.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="css/Header.css" />
     <link rel="stylesheet" href="css/MasterStyle.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <link rel="icon" type="icon" href="assets/HedgehogIcon.png" />
     <!--FAVICON-->
   </head>
