centered the image on the footer

--- a/3DPrints.html
+++ b/3DPrints.html
@@ -69,9 +69,9 @@
     <div class="footer">
       <br>
       <br>
-      <img src="assets/PPio logo.png" width="25%"/>
+      <img src="assets/PPio logo.png" width="25%" class="image-center"/>
       <br>
-      <p>
+      <p class="text-center">
         Porky Productions is a group of highly established individuals namely
         Tristan and Ryan, who are on the path for technological development
         in many areas. This website is meant to showcase our accomplishments
