--- a/Models.html
+++ b/Models.html
@@ -99,7 +99,7 @@
     <div class="footer">
       <br>
       <br>
-      <img src="assets/PPio logo.png" width="25%"/>
+      <img src="assets/PPio logo.png" width="25%" class="image-center"/>
       <br>
       <p>
         Porky Productions is a group of highly established individuals namely
