--- a/develop.html
+++ b/develop.html
@@ -90,7 +90,7 @@
       <br>
       <img src="assets/PPio logo.png" width="25%" class="image-center"/>
       <br>
-      <p>
+      <p class="text-center">
         Porky Productions is a group of highly established individuals namely
         Tristan and Ryan, who are on the path for technological development
         in many areas. This website is meant to showcase our accomplishments
