added basics for new section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
             <a href="develop.html">Developments Tab</a>
           </div>
       </div>
+      <div class='blue-gradient'>
+        <br>
+        <br>
+        <br>
+        <h1 class="mainTitle-white">
+          Our Mission
+        </h1>
+        <br>
+        <br>
+        <br>
+      </div>
       <div class="footer">
         <br>
         <br>
