laid out basics for new "mission section"

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
         <br>
         <br>
       </div>
+      <div>
+        <p class="mainBody">
+          WORDS
+        </p>
+      </div>
       <div class="footer">
         <br>
         <br>
