finished mission paragraph

--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
       </div>
       <div>
         <p class="mainBody">
-          WORDS
+         Here at PorkyProductions© we are on a mission to create technology that can change the world. <br>
+         Whether it be a game, a model, or a software development, we are dedicated to positively impacting the world. <br>
+         We chose to do this because we believe that technology (when used in the right ways) can and will positively impact humanity. <br>
+         We believe that technology can be used to create a better world, and that we can use technology to help us do that. <br>
+         Join us as we create technology that can change the world!
         </p>
       </div>
       <div class="footer">
