added second gradient takeover

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         <br>
         <br>
       </div>
+      <br>
       <div>
         <p class="mainBody">
          Here at PorkyProductions© we are on a mission to create technology that can change the world. <br>
@@ -146,6 +147,38 @@
          Join us as we create technology that can change the world!
         </p>
       </div>
+      <br>
+      <div class='blue-purp-gradient'>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1 class="mainTitle-white">
+          Who We Are
+        </h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+      <br>
+      <br>
       <div class="footer">
         <br>
         <br>
