--- a/index.html
+++ b/index.html
@@ -179,6 +179,30 @@
       </div>
       <br>
       <br>
+      <div class="mainBody-grid">
+        <div class="mainBody-tile">
+          <h3>Tristan</h3>
+          <p>
+            Tristan is a computer science student at the University of
+            Waterloo. He is currently a junior at the University of Waterloo
+            studying Computer Science. Tristan is a huge fan of video games
+            and is currently working on a project to create a game called
+            "Porky Productions".
+          </p>
+        </div>
+        <div class="mainBody-tile">
+          <h3>Ryan</h3>
+          <p>
+            Ryan is a computer science student at the University of
+            Waterloo. He is currently a junior at the University of Waterloo
+            studying Computer Science. Ryan is a huge fan of video games and
+            is currently working on a project to create a game called
+            "Porky Productions".
+          </p>
+        </div>
+      </div>
+      <br>
+      <br>
       <div class="footer">
         <br>
         <br>
