--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
       <div class="mainBody-grid">
         <div class="mainBody-tile">
           <h3>Tristan</h3>
+          <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" />
           <p>
             Tristan is a computer science student at the University of
             Waterloo. He is currently a junior at the University of Waterloo
@@ -192,6 +193,7 @@
         </div>
         <div class="mainBody-tile">
           <h3>Ryan</h3>
+          <img src="https://avatars.githubusercontent.com/u/82683251?v=4" />
           <p>
             Ryan is a computer science student at the University of
             Waterloo. He is currently a junior at the University of Waterloo
