fixed to be proper lipsum text

--- a/index.html
+++ b/index.html
@@ -184,11 +184,7 @@
           <h3>Tristan</h3>
           <img src="https://avatars.githubusercontent.com/u/53802238?v=4" width="210px" />
           <p>
-            Tristan is a computer science student at the University of
-            Waterloo. He is currently a junior at the University of Waterloo
-            studying Computer Science. Tristan is a huge fan of video games
-            and is currently working on a project to create a game called
-            "Porky Productions".
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt ex qui dolorum a obcaecati sequi amet tempora alias, nisi ea, nam nostrum commodi deleniti. Tempora facilis similique culpa fuga!.
           </p>
         </div>
         <div class="mainBody-tile">
