--- a/index.html
+++ b/index.html
@@ -191,11 +191,7 @@
           <h3>Ryan</h3>
           <img src="https://avatars.githubusercontent.com/u/82683251?v=4" />
           <p>
-            Ryan is a computer science student at the University of
-            Waterloo. He is currently a junior at the University of Waterloo
-            studying Computer Science. Ryan is a huge fan of video games and
-            is currently working on a project to create a game called
-            "Porky Productions".
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit et delectus fugiat eius, quisquam eveniet consectetur rerum eum quibusdam voluptatum cum commodi nemo dolorum itaque error labore unde. Eum, quis?
           </p>
         </div>
       </div>
